# villani

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLI_AGENT_MODE_CERTIFICATION.md  PLANS.md  README.md  pytest.ini
.villani-ops/: config.yaml  (+1 more)
components/villani/: .gitignore  README.md  pyproject.toml  setup.py
components/villani-agentd/: .gitignore  MANIFEST.in  README.md  pyproject.toml
components/villani-agentd/tests/: test_adapters.py  test_agentd_core.py  test_cli_agent_mode_m7_console.py  test_console.py  test_local_import.py  test_remote_worker.py  test_synchronization.py
components/villani-agentd/tests/fixtures/adapters/: claude-code.jsonl  codex.jsonl  generic-jsonl.jsonl  generic-process.jsonl  villani-code.jsonl
components/villani-agentd/villani_agentd/: __init__.py  cli.py  client.py  config.py  console.py  credentials.py  daemon_main.py  lifecycle.py  local_import.py  otlp.py  platform_process.py  process.py  redaction.py  remote_worker.py  server.py  spool.py  spool_schema.py  structured_log.py  trace_context.py  uploader.py  wrapper.py
components/villani-agentd/villani_agentd/adapters/: __init__.py  contract.py  implementations.py  normalize.py
components/villani-agentd/villani_agentd/console_assets/: console-assets.json  index.html
components/villani-agentd/villani_agentd/console_assets/assets/: index-BbBDMbii.js  index-D0m9i5XQ.css  index-D8R6XTy0.js  index-DbblgCLO.js  index-DeawW_je.js  index-DgrdmPrB.css  index-meSgV0bo.css
components/villani-control-plane/: .gitignore  Dockerfile  README.md  alembic.ini  control-plane-postgres.xml  docker-compose.yml  pyproject.toml
components/villani-control-plane/alembic/: env.py
components/villani-control-plane/alembic/versions/: 0a1b2c3d4e5f_composite_attempt_identity.py  4bf1fe1c3274_initial_ingestion_schema.py  a4b5c6d7e8f9_shadow_outcome_ledger.py  b5c6d7e8f9a0_offline_policy_publication.py  c6d7e8f9a0b1_structured_fleet_observability.py  d4973fd72304_record_ingest_protocol_version.py  d7e8f9a0b1c2_natural_language_queries.py  e18b9e61f721_sync_artifacts_live.py  e8f9a0b1c2d3_enterprise_identity_authorization.py  f3a1c2d4e5f6_remote_dispatch.py  f9a0b1c2d3e4_governance_operations.py
components/villani-control-plane/docs/: IDENTITY_AUTHORIZATION.md
components/villani-control-plane/tests/: conftest.py
components/villani-control-plane/tests/contract/: test_daemon_v2_contract.py
components/villani-control-plane/tests/integration/: test_postgres_persistence.py
components/villani-control-plane/tests/load/: RESULTS.md  test_load_smoke.py
components/villani-control-plane/tests/unit/: test_api.py  test_artifact_enrollment_live.py  test_enterprise_identity_authorization.py  test_fleet_observability.py  test_governance_operations.py  test_interrogation.py  test_outcome_ledger.py  test_policy_publication.py  test_remote_dispatch.py  test_security_and_services.py
components/villani-control-plane/villani_control_plane/: __init__.py  backup.py  config.py  database.py  encryption.py  errors.py  live.py  main.py  metrics.py  models.py  object_store.py  schemas.py  security.py  tamper.py
components/villani-control-plane/villani_control_plane/api/: dependencies.py  routes.py
components/villani-control-plane/villani_control_plane/repositories/: __init__.py  core.py
components/villani-control-plane/villani_control_plane/services/: __init__.py  auth.py  authorization.py  bootstrap.py  fleet.py  governance.py  identity.py  ingestion.py  interrogation.py  operations.py  outcome_ledger.py  policy_publication.py  query.py  remote_dispatch.py  synchronization.py
components/villani/tests/: test_cli_agent_mode_m7_setup.py  test_diagnostics.py  test_distribution.py  test_install_local.py  test_onboarding.py  test_onboarding_integration.py  test_pt10_performance.py  test_pt10_self_service.py  test_service_commands.py
components/villani/villani_distribution/: __init__.py  cli.py  diagnostics.py  frozen_entry.py  maintenance.py  migrations.py  onboarding.py  release-signing-placeholder.json  services.py  support_bundle.py  update_system.py  vfr.py
(+1093 files in other folders)
