[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "villani-agentd"
version = "1.0.0"
description = "Local-only Villani telemetry and artifact daemon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["villani-ops==1.0.0", "PyYAML>=6"]

[project.optional-dependencies]
test = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]
keyring = ["keyring>=25,<26"]

[project.scripts]
villani-agentd = "villani_agentd.cli:main"

[tool.setuptools.packages.find]
include = ["villani_agentd*"]
namespaces = true

[tool.setuptools.package-data]
"villani_agentd.console_assets" = ["*"]
"villani_agentd.console_assets.assets" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
